# LightMan

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pytest.yaml
light_man/: __init__.py  algorithm.py  models.py  views.py
scripts/: light_intersection.py  optimize_layout.py  plot.py  plot.py.orig
tests/: test_models.py
